--- a/main.html
+++ b/main.html
@@ -7,7 +7,37 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form action="post">
+		<h1>Job Application Form</h1>
+		  <label for="name">Name</label>
+		<input type="text" id="name" required><br>
+		<label for="email">Email</label>
+		<input type="email" id="email" required><br>
+		<label for="gender-m">Gender</label><br>
+		<input type="radio" id="gender-m" required>
+		<label for="gender-m">Male</label>
+		
+		<input type="radio" id="gender-f" required>
+		<label for="gender-f">Female</label><br>
+
+	<label id="laptop" >Laptop Brands</label>
+		<select> 
+			<option>Apple</option>
+			<option>Asus</option>
+			<option>HP</option>
+		</select><br>
+	<label for="age">Age</label>
+  <input type="number" id="age" required><br>
+			<label for="dob">Date of Birth</label>
+  <input type="date" id="dob" required><br>
+ <label for="password">Password</label>
+  <input type="password" id="password" required><br>
+
+	<label for="portfolio">Portfolio URL</label>
+  <input type="url" id="portfolio" required><br>
+
+   <button class="btn" type="submit"> Submit Button</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
